<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">欧+小树苗</string>
    <string name="navigation_drawer_open">打开侧滑菜单</string>
    <string name="navigation_drawer_close">关闭侧滑菜单</string>
    <string name="action_settings">设置</string>

    <string name="nickname">昵称</string>
    <string name="myinfo">编辑个人资料</string>
    <string name="center_info">个人中心</string>
    <string name="exit">退出</string>
    <string name="news_center">消息中心</string>
    <string name="main_page">首页</string>
    <string name="check_out_classmate">查看同期学员</string>
    <string name="my_courde">我要选课</string>
    <string name="my_remarks">我的备注</string>
    <string name="my_info">个人中心</string>
    <string name="class_schedule">课程安排</string>
    <string name="Course_materials">课程资料</string>
    <string name="materials">课程材料</string>
    <string name="my_classmate">我的同学</string>
    <string name="login">登录</string>
    <string name="login_btn">登    录</string>
    <string name="input_username">请输入账号</string>
    <string name="input_passworld">请输入密码</string>
    <string name="registered">注册</string>
    <string name="registered_btn">注    册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="mt_xieyi">点击注册即表示已同意《MT协议》</string>

    //没有翻译
    <string name="open_class">选课开放时间:</string>
    <string name="edit_menu">编辑</string>
    <string name="remarks_menu_complete">完成</string>
    <string name="my_obligatory">我的必修课</string>
    <string name="all_check">全选</string>
    <string name="downing">确认下载</string>
    <string name="down">下载</string>
    <string name="my_schedule">我的日程</string>
    <string name="email_address">请输入您的邮箱地址</string>
    <string name="forget_pass">忘记密码</string>
    <string name="depar_name">部门列表</string>
    <string name="elective_data">选修列表</string>
    <string name="my_class">我的选修课</string>
    <string name="password_update">密码更新</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="group_activity">小组活动</string>
    <string name="retrieve_password">密码找回</string>
    <string name="avatar">头像</string>
    <string name="brandname">品牌</string>
    <string name="department">部门</string>
    <string name="save">保 存</string>
    <string name="Edit_personal_profile">编辑资料</string>

    <string name="chinese_name">中文名字</string>
    <string name="englich_name">英文名字</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="year_of_work">入职年份</string>
    <string name="company_email">公司邮箱</string>

    <string name="Language">语言设置</string>
    <string name="Change_Password">密码更新</string>
    <string name="Old_Password">登录密码</string>
    <string name="New_Password">新密码</string>
    <string name="Comfirm_Password">确认密码</string>
    <string name="please_set_the_password">请重新设置登录密码</string>
    <string name="comfirm">确 认</string>
    <string name="enter_the_password">请输入登录密码</string>
    <string name="enter_a_new_password">请输入新的密码</string>
    <string name="enter_the_password_again">请再次输入新密码</string>
    <string name="number">账号</string>
    <string name="has">已修</string>
    <string name="the_courses_and_the_cumulative_class">本次选修课程情况和累计课时：</string>
    <string name="day">天</string>
    <string name="deteils">详情</string>

    <string name="cancel">取消</string>
    <string name="modify">更改</string>
    <string name="Select_training_session">培训场次</string>
    <string name="Schedule">时间安排</string>
    <string name="MultiSelect">批量下载</string>
    <string name="Download">确认下载</string>
    <string name="Finished">已下载</string>
    <string name="M">月</string>
    <string name="D">日</string>
    <string name="Downloading">正在下载</string>
    <string name="cancel_all">全不选</string>
    <string name="Failed">下载失败</string>
    <string name="seat">剩余座位:</string>
    <string name="required_list">我的必修课</string>
    <string name="elective_list">我的选修课</string>
    <string name="course_introduction">课程简介</string>
    <string name="course_information">课程信息</string>
    <string name="click_down">点击下载</string>
    <string name="search">搜索</string>
    <string name="download_management">下载管理</string>
    <string name="stop">停止</string>
    <string name="delete">删除</string>
    <string name="start">开始</string>
    <string name="waiting">等待下载</string>
    <string name="tips">提示</string>
    <string name="sure">确定</string>
    <string name="care_wifi">当前使用手机流量,请谨慎下载！</string>
    <string name="The_selected_course">已选课程</string>
    <string name="EndTime">结束</string>
    <string name="Team_members">小组成员</string>
    <string name="time">时间</string>
    <string name="Course_Name">课程名称</string>
    <string name="type_of_activity">活动名称</string>
    <string name="_200">说说你的学习心得吧（200字以内）</string>
    <string name="lan_set">语言设置</string>
    <string name="Choice">选择</string>
    <string name="Incomplete">未完成</string>
    <string name="Complete">完成</string>
    <string name="mail_list">通讯录</string>
    <string name="news">日历</string>
    <string name="mine">我的</string>
    <string name="my_group">我的小组</string>
    <string name="question">互问互答</string>
    <string name="more">更多</string>

</resources>
