<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_mainpage"
                    android:checked="true"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/main_page" />
        </group>


        <group android:checkableBehavior="single"
            android:id="@+id/useless">
                <item
                    android:id="@+id/nav_classmate"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/my_classmate" />
                <item
                    android:id="@+id/nav_schedule"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/my_schedule" />
                <item
                    android:id="@+id/nav_course"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/my_courde" />
                <item
                    android:id="@+id/nav_data"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/Course_materials" />
                <item
                    android:id="@+id/nav_remarks"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/my_remarks" />

        </group>


        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/center_info" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/exit" />
        </group>




</menu>
