<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/login_et_username"
            android:hint="@string/input_username"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="30dp"
            android:background="@drawable/login_et_shape"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_et_password"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="30dp"
                android:hint="@string/input_passworld"
                android:background="@drawable/login_et_shape"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/login_eye"
                android:src="@drawable/closeeye"
                android:layout_marginRight="18dp"
                android:layout_marginEnd="18dp"
                android:layout_centerVertical="true"
                android:layout_alignRight="@+id/login_et_password"
                android:layout_alignEnd="@+id/login_et_password" />
        </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_shape"
        android:text="@string/login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:textColor="#fff"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered"
            android:textColor="@color/login_text_color"
            android:id="@+id/login_registered" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/login_forget_password"
            android:text="@string/forget_password"
            android:textColor="@color/login_text_color"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</LinearLayout>