<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/registered_et_username"
        android:hint="@string/input_username"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="30dp"
        android:background="@drawable/login_et_shape"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/registered_et_password"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="30dp"
            android:hint="@string/input_passworld"
            android:background="@drawable/login_et_shape"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/registered_eye"
            android:src="@drawable/closeeye"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/registered_et_password"
            android:layout_alignEnd="@+id/registered_et_password" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_shape"
        android:text="@string/registered"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:textColor="#fff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mt_xieyi"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/login_text_color"/>
</LinearLayout>