<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:layout_marginTop="60dp"
        android:paddingLeft="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="#6c6c6c"
                android:textSize="20sp"
                android:text="@string/time"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="20sp"
                android:id="@+id/my_remarks_time"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="#6c6c6c"
                android:textSize="20sp"
                android:text="@string/Course_Name"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="20sp"
                android:id="@+id/my_remarks_title"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="#6c6c6c"
                android:textSize="20sp"
                android:text="@string/type_of_activity"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="20sp"
                android:id="@+id/remarks_type"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center|left"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:text="@string/my_remarks"/>
    </LinearLayout>
    //输入框
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#6c6c6c"
            android:visibility="gone"
            android:id="@+id/remarks_two_text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:hint="@string/_200"
            android:gravity="top"
            android:id="@+id/my_remarks_two_et"
            android:padding="10dp"
            android:background="@drawable/edittext_shape"/>
    </LinearLayout>
</LinearLayout>