<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/white"
        android:id="@+id/edit_info_image"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="#6c6c6c"
            android:text="@string/avatar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:gravity="center|right">
            <com.zzh.mt.widget.CircleImageView
                android:layout_width="60dp"
                android:id="@+id/edit_info_header"
                android:layout_height="60dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="#6c6c6c"
            android:text="@string/nickname"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:gravity="center|right">
            <com.zzh.mt.widget.ClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="20sp"
                android:gravity="right"
                android:id="@+id/edit_nickname"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@null"
                android:text="Jessica"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="#6c6c6c"
            android:text="@string/brandname"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:gravity="center|right">
            <com.zzh.mt.widget.ClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:gravity="right"
                android:background="@null"
                android:id="@+id/edit_brand"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="20sp"
                android:text="牌牌"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="#6c6c6c"
            android:text="@string/department"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:id="@+id/deparname_layout"
            android:gravity="center|right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="20sp"
                android:id="@+id/text_deparname"
                android:text="人事部"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f4b335"
            android:textColor="@color/white"
            android:text="@string/save"
            android:textSize="20sp"
            android:id="@+id/edit_save"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>