<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/mine_toolbar"
        android:background="@color/main_color">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:text="@string/center_info"/>
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants">

            <include layout="@layout/nav_header_main"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mine_recycler"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="60dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/mine_language_setting"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="#6c6c6c"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:text="@string/Language"
                        android:layout_marginLeft="10dp"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/my_elective_right_icpn"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="1dp"
                    android:id="@+id/mine_passw"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="#6c6c6c"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:text="@string/Change_Password"
                        android:layout_marginLeft="10dp"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/my_elective_right_icpn"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/mine_getout"
                    android:background="@color/red_light"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/exit"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



</LinearLayout>