<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <com.zzh.mt.widget.SelectableRoundedImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:sriv_left_bottom_corner_radius="3dip"
            app:sriv_left_top_corner_radius="3dip"
            app:sriv_right_bottom_corner_radius="3dip"
            app:sriv_right_top_corner_radius="3dip"
            android:id="@+id/schedule_item_image"
            android:src="@drawable/imag_demo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/schedule_recycler_item_title"
                android:layout_gravity="left"
                android:textSize="20sp"
                android:textColor="#333"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/schedule_recycler_item_flag"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/Incomplete"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/schedule_recycler_item_image_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:background="@drawable/button_click_shape"
                        android:text="@string/Schedule"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/schedule_recycler_item_details"
                        android:layout_width="90dp"
                        android:layout_height="34dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/button_click_shape"
                        android:text="@string/deteils"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>